# SquigglyPy

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  squigglypy.code-workspace
squigglypy/: context.py  dsl.py  resolvers.py  tree.py  utils.py
swungdash/: context.py  dsl.py  resolvers.py  tree.py  utils.py
test/: test_dsl.py  test_tree.py
