[tool.poetry]
name = "swungdash"
version = "0.1.0"
description = ""
authors = ["Denis Drescher <denis.drescher@claviger.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.19"
boltons = "^20.2"
matplotlib = "^3.3"
seaborn = "^0.11.0"
scipy = "^1.5"
mypy = "^0.790"

[tool.poetry.dev-dependencies]
pytest = "^6.1"
black = "^20.8b1"
pylint = "^2.6.0"
ipython = "^7.19.0"
brunette = "^0.1.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.brunette]
line-length = 99
single-quotes = true
target-version = ['py38']